[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/FinalRoom/FinalRoomBackground.jpg" type="Texture" id=1]
[ext_resource path="res://Final_Screen_Text.gd" type="Script" id=2]
[ext_resource path="res://Assets/FinalRoom/parchment.png" type="Texture" id=3]
[ext_resource path="res://Dialog/alaGardCustom.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/FinalRoom/Next_Button.png" type="Texture" id=5]
[ext_resource path="res://Question_1.gd" type="Script" id=6]
[ext_resource path="res://Question_2.gd" type="Script" id=7]
[ext_resource path="res://Question_3.gd" type="Script" id=8]
[ext_resource path="res://Assets/FinalRoom/Next_Button_Pressed.png" type="Texture" id=9]
[ext_resource path="res://Question_4.gd" type="Script" id=10]
[ext_resource path="res://Question_1_answer3.gd" type="Script" id=11]
[ext_resource path="res://Question_1_answer.gd" type="Script" id=12]
[ext_resource path="res://Question_1_answer2.gd" type="Script" id=13]
[ext_resource path="res://Question_1_answer4.gd" type="Script" id=14]
[ext_resource path="res://Next_Button.gd" type="Script" id=15]
[ext_resource path="res://Assets/FinalRoom/Final_Button_Pressed.png" type="Texture" id=16]
[ext_resource path="res://Assets/FinalRoom/Final_Button.png" type="Texture" id=17]
[ext_resource path="res://Final_Button.gd" type="Script" id=18]
[ext_resource path="res://Final_Screen_Background.gd" type="Script" id=19]
[ext_resource path="res://Parchment.gd" type="Script" id=20]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 4 )

[sub_resource type="Theme" id=5]
default_font = ExtResource( 4 )

[node name="FinalScreen" type="Node2D"]

[node name="Final_Screen_Background" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 400.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="Parchment" type="Sprite" parent="YSort"]
position = Vector2( 152, 177 )
scale = Vector2( 0.578947, 0.637363 )
texture = ExtResource( 3 )
script = ExtResource( 20 )

[node name="Final_Screen_Text" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 40.0
margin_right = 248.0
margin_bottom = 320.0
theme = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_1_answer" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 67.0
margin_right = 216.0
margin_bottom = 91.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_1_answer2" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 151.0
margin_right = 216.0
margin_bottom = 175.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_1_answer3" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 222.0
margin_right = 216.0
margin_bottom = 246.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_1_answer4" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 280.0
margin_right = 216.0
margin_bottom = 304.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next_Button" type="TextureButton" parent="."]
margin_left = 288.0
margin_top = 296.0
margin_right = 688.0
margin_bottom = 496.0
rect_scale = Vector2( 0.15, 0.2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_1" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 43.0
margin_right = 256.0
margin_bottom = 63.0
theme = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_2" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 118.0
margin_right = 258.0
margin_bottom = 151.0
theme = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_3" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 190.0
margin_right = 248.0
margin_bottom = 214.0
theme = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 4 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question_4" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 248.0
margin_right = 240.0
margin_bottom = 272.0
theme = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 4 )
override_selected_font_color = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Final_Button" type="TextureButton" parent="."]
margin_left = 286.0
margin_top = 293.0
margin_right = 897.0
margin_bottom = 548.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="file_loaded" from="Final_Screen_Text" to="Question_1_answer" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_1_answer2" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_1_answer3" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_1_answer4" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_1" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_2" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_3" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="file_loaded" from="Final_Screen_Text" to="Question_4" method="_on_Final_Screen_Text_file_loaded"]
[connection signal="pressed" from="Next_Button" to="Final_Screen_Text" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_1_answer" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_1_answer2" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_1_answer3" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_1_answer4" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Next_Button" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_1" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_2" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_3" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Question_4" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Next_Button" to="Final_Button" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Final_Button" to="Question_1_answer" method="_on_Final_Button_pressed"]
[connection signal="pressed" from="Final_Button" to="Question_1_answer2" method="_on_Final_Button_pressed"]
[connection signal="pressed" from="Final_Button" to="Question_1_answer3" method="_on_Final_Button_pressed"]
[connection signal="pressed" from="Final_Button" to="Question_1_answer4" method="_on_Final_Button_pressed"]
